# vps-000

./: .gitignore  .sops.yaml  CLAUDE.md  README.md
.github/actions/deploy-service/: action.yml
.github/workflows/: deploy-monitoring.yml  deploy-n8n.yml  deploy.yml  notify.yml  security.yml
chillang/: .env.enc  REQUIREMENTS.md  docker-compose.yml
chillang/backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
chillang/backend/alembic/: env.py
chillang/backend/app/: config.py  main.py  models.py  schemas.py
chillang/backend/app/routers/: words.py
chillang/backend/app/services/: llm.py  word_service.py
chillang/extension/: package-lock.json  package.json  vite.config.js
chillang/scripts/: seed.py
dashy/: conf.yml  docker-compose.yml
docs/: docmost-tcom-vn.md  docmost.md  infrastructure.md  outline.md
monitoring/: .env.enc  .env.example  docker-compose.yml
monitoring/alertmanager/: alertmanager.yml
monitoring/prometheus/: prometheus.yml
n8n/: .env.enc  docker-compose.yml
n8n/workflows/: daily_news_wf.json
outline/: .env.enc  docker-compose.yml
scripts/: deploy.sh
services/docmost/: .env.enc  docker-compose.yml
services/outline/: .env.enc
services/traefik/: .env.enc  traefik.yml
stories/: docker-compose.yml
stories/backend/: Dockerfile  main.py  pyproject.toml
story/: docker-compose.yml
story/backend/: Dockerfile  pyproject.toml
todo/: docker-compose.yml
todo/backend/: main.py  pyproject.toml
traefik/: docker-compose.yml  traefik.yml
traefik/dynamic/: middlewares.yml  routes.yml
(+19 files in other folders)
